syntax = "proto3";

package santa_cruz;

service ExerciseService {
  rpc GetExercise (GetExerciseRequest) returns (Exercise);
}

message GetExerciseRequest {
  int32 id = 1;
}

message Exercise {
  int32 id = 1;
  string name = 2;
  string description = 3;
}
