syntax = "proto3";

package santa_cruz;

message WorkoutRepeat {
  int32 id = 1;
  int32 workout_id = 2;
  int32 exercise_id = 3;
  int32 repeats = 4;
  optional double weight = 5;
}
